--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@ layout: home
 <!--            <strong>
                 <a rel="author" href="/about" title="" target="_blank" style="font-size: 1.5em;">tommy</a>
             </strong>-->
-            <br/>
-            <br/>
-            <span class="muted">——<br/>"will code for bananas.<br>Live in Shanghai.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
+
+            <span class="muted">
+                <br/>
+                <br/>--<br/>"will code for bananas.<br>Live in Shanghai.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
         </p>
     </address>
 </div>
