--- a/about/about.html
+++ b/about/about.html
@@ -4,14 +4,11 @@ layout: default
 
 <div>
     <address>
-        <img src="/images/author.jpg" class="big-avatar">
+        <img src="/images/author.jpg" class="big-author">
         <p>
-            <!--            <strong>
-                            <a rel="author" href="/about" title="" target="_blank" style="font-size: 1.5em;">tommy</a>
-                        </strong>-->
-            <br/>
-            <br/>
-            <span class="muted">——<br/>"will code for bananas.<br>Live in Shanghai.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
+            <span class="muted">
+                <br/>
+                <br/>--<br/>"will code for bananas.<br>Live in Shanghai.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
         </p>
     </address>
 </div>
