--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: home
     <address>
         <img src="/images/avatar.jpg" class="big-avatar">
         <p>
-            <span class="muted">
-                <br/>
-                <br/>--<br/>"will code for bananas.<br>Live in Shanghai.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
+            <!--<strong></strong>-->
+
+            <span class="muted">"will code for bananas.<br>Live in Shanghai.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
         </p>
     </address>
 </div>
