--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@ layout: home
     <address>
         <img src="/images/avatar.jpg" class="big-avatar">
         <p>
-            <strong></strong>
-
-            <span class="muted">"will code for bananas.<br>Live in Shanghai.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
+            <span class="muted"> <br/>--<br/>"Will code for bananas.<br>Live in Shanghai.Like money, stock, programming, <br>jewelry, snooker &amp; girl."</span>
         </p>
     </address>
 </div>
