--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
     <address>
         <img src="/images/avatar.jpg" class="big-avatar">
         <p>
-            <span class="muted"> <br/>--<br/>"Live in Shanghai.Will code for bananas.<br>.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
+            <span class="muted"> <br/>--<br/>"Live in Shanghai,will code for bananas.<br>Like money, stock, programming, jewelry, snooker &amp; girl."</span>
         </p>
     </address>
 </div>
