--- a/about/about.html
+++ b/about/about.html
@@ -6,9 +6,12 @@ layout: default
     <address>
         <img src="/images/author.jpg" class="big-author">
         <p>
+            <strong>
+                吴锦晟 (Tommy wu)
+            </strong>
             <span class="muted">
-                <br/>
-                <br/>--<br/>"will code for bananas.<br>Live in Shanghai.Like money, stock, programming, jewelry, snooker &amp; girl."</span>
+                就职于上海金桥信息股份有限公司 技术中心
+            </span>
         </p>
     </address>
 </div>
