--- a/about/about.html
+++ b/about/about.html
@@ -14,7 +14,8 @@ layout: default
                 就职于上海金桥信息股份有限公司 技术中心
             </span>
             <br/>
-            <i class="tag">80后屌丝</i>&nbsp;<i class="tag">一线码农</i>&nbsp;<i class="tag">摇滚&说唱</i>&nbsp;<i class="tag">驴子</i>&nbsp;<i class="tag">业余斯诺克球手</i>
+            <i class="tag">80后屌丝</i>&nbsp;<i class="tag">一线码农</i>&nbsp;<i class="tag">摇滚&说唱</i>&nbsp;<i class="tag">业余斯诺克球手</i><br/>
+            &nbsp;<i class="tag">黄牛&驴子</i>
         </p>
     </address>
 </div>
