--- a/about/about.html
+++ b/about/about.html
@@ -7,10 +7,10 @@ layout: default
         <img src="/images/author.jpg" class="big-author">
         <p>
             <strong>
-                吴锦晟 (Tommy wu)
+                <span class="fonttitle">吴锦晟</span> (Tommy wu)
             </strong>
             <br/>
-            <span class="muted">
+            <span class="muted" style="font-size: small">
                 就职于上海金桥信息股份有限公司 技术中心
             </span>
             <br/>
