--- a/about/about.html
+++ b/about/about.html
@@ -5,9 +5,9 @@ layout: default
 <div>
     <address>
         <img src="/images/author.jpg" class="big-author">
-        <p>
+        <p style="position:relative;top:100px">
             <strong>
-                <span class="fonttitle">吴锦晟</span> (Tommy wu)
+                <span class="font-title-size"><span class="font-title">吴锦晟</span> (Tommy wu)</span>
             </strong>
             <br/>
             <span class="muted" style="font-size: small">
