--- a/about/about.html
+++ b/about/about.html
@@ -5,12 +5,12 @@ layout: default
 <div>
     <address>
         <img src="/images/author.jpg" class="big-author">
-        <p style="position:relative;top:100px">
+        <p style="position:relative;top:80px">
             <strong>
                 <span class="font-title-size"><span class="font-title">吴锦晟</span> (Tommy wu)</span>
             </strong>
             <br/>
-            <span class="muted" style="font-size: small">
+            <span class="muted" style="font-size:normal">
                 就职于上海金桥信息股份有限公司 技术中心
             </span>
             <br/>
