--- a/about/about.html
+++ b/about/about.html
@@ -5,9 +5,9 @@ layout: default
 <div>
     <address>
         <img src="/images/author.jpg" class="big-author">
-        <p style="position:relative;top:80px">
+        <p style="position:relative;top:80px; left: 50px;">
             <strong>
-                <span class="font-title-size"><span class="font-title">吴锦晟</span> (Tommy wu)</span>
+                <span class="font-title font-title-size">吴锦晟</span><span class="font-title-size"> (Tommy wu)</span>
             </strong>
             <br/>
             <span class="muted" style="font-size:normal">
