--- a/about/about.html
+++ b/about/about.html
@@ -11,7 +11,7 @@ layout: default
             </strong>
             <br/>
             <br/>
-            <span class="muted font-h2">
+            <span class="muted">
                 就职于上海金桥信息股份有限公司 技术中心
             </span>
             <br/>
