--- a/about/about.html
+++ b/about/about.html
@@ -5,18 +5,22 @@ layout: default
 <div>
     <address>
         <img src="/images/author.jpg" class="big-author">
-        <p style="position:relative;top:80px; left: 30px;">
+        <p style="position:relative;top:7em; left: 3em;">
             <strong>
                 <span class="font-title font-title-size">吴锦晟</span><span class="font-title-size"> (Tommy wu)</span>
             </strong>
             <br/>
             <span class="muted">
-                就职于上海金桥信息股份有限公司 技术中心
+                现任职于上海金桥信息股份有限公司 技术中心
             </span>
             <br/>
             <br/>
-            <i class="tag">80后屌丝</i>&nbsp;<i class="tag">一线码农</i>&nbsp;<i class="tag">摇滚&说唱</i>&nbsp;<i class="tag">业余斯诺克球手</i><br/>
-            <i class="tag">黄牛&驴子</i>
+            <i class="tag">80后屌丝</i>&nbsp;<i class="tag">一线码农</i>&nbsp;<i class="tag">Rock&amp;Rap</i>&nbsp;<i class="tag">业余斯诺克球手</i><br/>
+            <i class="tag">hard worker</i>&nbsp;<i class="tag">Race</i>
         </p>
     </address>
+
+    <div id="timeline">
+        <p class="line-end" data-translate="recently">最近</p>
+    </div>
 </div>
