--- a/about/about.html
+++ b/about/about.html
@@ -22,5 +22,27 @@ layout: default
 
     <div id="timeline">
         <p class="line-end" data-translate="recently">最近</p>
+        <ul class="item-list">
+            <li class="item" id="ELF_DOM_ID_1">
+                <div class="meta" style="position: absolute; top: 0px; left: -150px;">
+                    <i class="fa fa-code-fork"></i>
+                    <p class="date">2014-07</p>
+                    <i class="arrow-left"></i>
+                </div>
+                <div class="content" id="ELF_DOM_ID_7">
+                    <header>
+                        <h3>金桥多媒体融合云共享平台</h3>
+                        <p class="tags">
+                            <span class="tag">node.js</span><span class="tag">backbone</span><span class="tag">express</span><span class="tag">bootstrap</span><span class="tag">WPF</span><span class="tag">C#</span>
+                        </p>
+                    </header>
+
+                    <article>
+                        <p>待述...</p>
+                    </article>
+                </div>
+            </li>
+        </ul>
+        <p class="line-end">...</p>
     </div>
 </div>
