--- a/about/about.html
+++ b/about/about.html
@@ -23,25 +23,34 @@ layout: default
         <div id="timeline">
             <p class="line-end" data-translate="recently">最近</p>
             <ul class="item-list">
-                <li class="item" id="ELF_DOM_ID_1">
-                    <div class="meta" style="position: absolute; top: 0px; left: -150px;">
-                        <i class="fa fa-code-fork"></i>
-                        <p class="date">2014-07</p>
+                {% for item in site.categories.works %}
+                <li class="item">
+                    <div class="meta">
+                        <i class="fa fa-{{item.icon}}"></i>
+                        <p class="date">{{item.date | date: "%Y-%m"}}</p>
                         <i class="arrow-left"></i>
                     </div>
-                    <div class="content" id="ELF_DOM_ID_7">
+                    <div class="content">
                         <header>
-                            <h3>金桥多媒体融合云共享平台</h3>
+                            <div class="links">
+                                {% if item.gitrepo %}<iframe src="http://ghbtns.com/github-btn.html?user=mytharcher&amp;repo={{item.gitrepo}}&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="82" height="20" class="link-item"></iframe>{% endif %}
+                            </div>
+                            <h3>{% if item.link %}<a href="{{item.link}}" target="_blank">{{item.title}}</a>{% else %}{{item.title}}{% endif %}</h3>
                             <p class="tags">
-                                <span class="tag">node.js</span><span class="tag">backbone</span><span class="tag">express</span><span class="tag">bootstrap</span><span class="tag">WPF</span><span class="tag">C#</span>
+                                {% for tag in item.tags %}<span class="tag">{{tag}}</span>{% endfor %}
                             </p>
                         </header>
-
+                        {% if item.figures %}
+                        <figure>
+                            {% for img in item.figures %}<img src="{{img.src}}" {% if img.height %}height="{{img.height}}" {% endif %}style="max-width:{{100 | divided_by:forloop.length}}%;" />{% endfor %}
+                        </figure>
+                        {% endif %}
                         <article>
-                            <p>待述...</p>
+                            {{item.content}}
                         </article>
                     </div>
                 </li>
+                {% endfor %}
             </ul>
             <p class="line-end">...</p>
         </div>
