--- a/about/about.html
+++ b/about/about.html
@@ -5,10 +5,11 @@ layout: nil
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8" />
-    <meta name="author" content="{{ site.meta.author.name }}" />
+    <meta name="author" content="https://plus.google.com/106464408304855124012" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>为自由而工作 - 严俊羿</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" />
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <style type="text/css">
         *{box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
         html,body,h1,h2,h3,h4,h5,h6,ul,ol,li,p,form,dl,dt,dd,figure{margin:0; padding:0; border:0;}
