--- a/about/about.html
+++ b/about/about.html
@@ -1,30 +1,9 @@
 ---
-layout: nil
+layout: default
 ---
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="utf-8" />
-    <meta name="author" content="https://plus.google.com/106464408304855124012" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" />
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    <style type="text/css">
-        *{box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
-        html,body,h1,h2,h3,h4,h5,h6,ul,ol,li,p,form,dl,dt,dd,figure{margin:0; padding:0; border:0;}
-        html,body{height:100%;}
-        body{line-height:1.6em; font-family:Helvetica, Arial, sans-serif; color:#555; background: url(http://mbed.qiniudn.com/yanjunyi.com/img/bg-light.jpg) fixed;}
-        a{margin:0 2px; color:#06c; text-decoration:none;}
-        a:hover{text-decoration:underline;}
-        h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{margin:0;}
-        img{border:0; vertical-align: middle;}
-        input,textarea{resize:none;}
-        </style>
-    </head>
-<body>
-    <div>
-        <address>
+
+<div>
+    <address>
         <img src="/images/author.jpg" class="big-author">
         <p style="position:relative;top:7em; left: 3em;">
             <strong>
@@ -40,7 +19,7 @@ layout: nil
             <i class="tag">hard worker</i>&nbsp;<i class="tag">Race</i>
         </p>
     </address>
-        <div class="about-timeline-main">
+    <div class="about-timeline-main">
         <div id="timeline">
             <p class="line-end" data-translate="recently">最近</p>
             <ul class="item-list">
@@ -76,8 +55,4 @@ layout: nil
             <p class="line-end">...</p>
         </div>
     </div>
-    </div>
-    <script type="text/javascript" src="../assets/elf-0.5.0.min.js"></script>
-    <script type="text/javascript" src="../assets/site.js"></script>
-</body>
-</html>
+</div>
