--- a/about/about.html
+++ b/about/about.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: about
 ---
 
 <div>
@@ -23,35 +23,25 @@ layout: default
         <div id="timeline">
             <p class="line-end" data-translate="recently">最近</p>
             <ul class="item-list">
-                {% for item in site.categories.works %}
-                <li class="item">
+                 <li class="item">
                     <div class="meta">
-                        <i class="fa fa-{{item.icon}}"></i>
-                        <p class="date">{{item.date | date: "%Y-%m"}}</p>
+                        <i class="fa fa-fa-stack-overflow"></i>
+                        <p class="date">2014-07</p>
                         <i class="arrow-left"></i>
                     </div>
                     <div class="content">
                         <header>
-                            <div class="links">
-                                {% if item.gitrepo %}<iframe src="http://ghbtns.com/github-btn.html?user=mytharcher&amp;repo={{item.gitrepo}}&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="82" height="20" class="link-item"></iframe>{% endif %}
-                            </div>
-                            <h3>{% if item.link %}<a href="{{item.link}}" target="_blank">{{item.title}}</a>{% else %}{{item.title}}{% endif %}</h3>
+                            <h3>金桥多媒体融合信息云共享平台</h3>
                             <p class="tags">
-                                {% for tag in item.tags %}<span class="tag">{{tag}}</span>{% endfor %}
+                                Node
                             </p>
                         </header>
-                        {% if item.figures %}
-                        <figure>
-                            {% for img in item.figures %}<img src="{{img.src}}" {% if img.height %}height="{{img.height}}" {% endif %}style="max-width:{{100 | divided_by:forloop.length}}%;" />{% endfor %}
-                        </figure>
-                        {% endif %}
                         <article>
-                            {{item.content}}
+                           暂无资料...
                         </article>
                     </div>
                 </li>
-                {% endfor %}
-            </ul>
+               </ul>
             <p class="line-end">...</p>
         </div>
     </div>
