--- a/about/about.html
+++ b/about/about.html
@@ -25,7 +25,7 @@ layout: about
             <ul class="item-list">
                  <li class="item">
                     <div class="meta">
-                        <i class="fa fa-fa-stack-overflow"></i>
+                        <i class="fa fa-stack-overflow"></i>
                         <p class="date">2014-07</p>
                         <i class="arrow-left"></i>
                     </div>
