--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@ layout: about
     <div class="about-timeline-main">
         <div id="timeline">
             <p class="line-end" data-translate="recently">最近</p>
-            <ul class="item-list">
+            <ul class="item-list" style="max-width: 1024px">
                 {% for item in site.categories.works %}
                 <li class="item">
                     <div class="meta">
