--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@ layout: home
 <div>
     <address>
         <img src="/images/avatar.jpg" class="big-avatar">
-        <p>
-            <span class="muted"> <br/>--<br/>"Live in Shanghai,will code for bananas.<br>Like free, money, stock, programming, jewelry, snooker &amp; girl."</span>
-        </p>
+        <div>
+            <p>
+                <span class="muted"> <br/>--<br/>"Live in Shanghai,will code for bananas.<br>Like free, programming, money, stock, jewelry, snooker &amp; girl."</span>
+            </p>
+        </div>
+
     </address>
 </div>
 <div class="home">
