--- a/about/index.html
+++ b/about/index.html
@@ -2,17 +2,31 @@
 layout: about
 ---
 <style type="text/css">
-    *{box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
-    html,body,h1,h2,h3,h4,h5,h6,ul,ol,li,p,form,dl,dt,dd,figure{margin:0; padding:0; border:0;}
-    html,body{height:100%;}
-    body{line-height:1.6em; font-family:Helvetica, Arial, sans-serif; color:#555;}
-    a{margin:0 2px; color:#06c; text-decoration:none;}
-    a:hover{text-decoration:underline;}
-    h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{margin:0;}
-    img{border:0; vertical-align: middle;}
-    input,textarea{resize:none;}
+    .about {
+        box-sizing:border-box;
+        -moz-box-sizing:border-box;
+        -webkit-box-sizing:border-box;
+    }
+    .about html,body,h1,h2,h3,h4,h5,h6,ul,ol,li,p,form,dl,dt,dd,figure{
+        margin:0;
+        padding:0;
+        border:0;
+    }
+    .about html,body{
+        height:100%;
+    }
+    .about body{
+        line-height:1.6em;
+        font-family:Helvetica, Arial, sans-serif;
+        color:#555;
+    }
+    .about a{margin:0 2px; color:#06c; text-decoration:none;}
+    .about a:hover{text-decoration:underline;}
+    .about h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{margin:0;}
+    .about img{border:0; vertical-align: middle;}
+    .about input,textarea{resize:none;}
 </style>
-<div>
+<div class="about">
     <address>
         <img src="/images/author.jpg" class="big-author">
         <p style="position:relative;top:7em; left: 3em;">
