--- a/about/index.html
+++ b/about/index.html
@@ -2,12 +2,11 @@
 layout: about
 ---
 <style type="text/css">
-    {box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
+    *{box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
     html,body,h1,h2,h3,h4,h5,h6,ul,ol,li,p,form,dl,dt,dd,figure{margin:0; padding:0; border:0;}
     html,body{height:100%;}
     body{line-height:1.6em; font-family:Helvetica, Arial, sans-serif; color:#555;}
     a{margin:0 2px; color:#06c; text-decoration:none;}
-    a:hover{text-decoration:underline;}
     h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{margin:0;}
     img{border:0; vertical-align: middle;}
     input,textarea{resize:none;}
@@ -32,7 +31,7 @@ layout: about
     <div class="about-timeline-main">
         <div id="timeline">
             <p class="line-end" data-translate="recently">最近</p>
-            <ul class="item-list" style="max-width: 1024px">
+            <ul class="item-list">
                 {% for item in site.categories.works %}
                 <li class="item">
                     <div class="meta">
