--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,8 @@
 layout: about
 ---
 <style type="text/css">
-    *{box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
-/*    html,body,h1,h2,h3,h4,h5,h6,ul,ol,li,p,form,dl,dt,dd,figure{margin:0; padding:0; border:0;}
+/*    *{box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
+    html,body,h1,h2,h3,h4,h5,h6,ul,ol,li,p,form,dl,dt,dd,figure{margin:0; padding:0; border:0;}
     body{line-height:1.6em; font-family:Helvetica, Arial, sans-serif; color:#555;}
     a{margin:0 2px; color:#06c; text-decoration:none;}
     img{border:0; vertical-align: middle;}
