--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ layout: home
       </li>
       {% endif %}
     {% endfor %}
-
+    {% for post in paginator.posts %}
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    {% endfor %}
   </ul>
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 </div>
