--- a/download.html
+++ b/download.html
@@ -1,12 +1,11 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head id="head1">
-
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-    <form id="form1">
-      <h3>app下载</h3>
-      <a href="itms-services://?action=download-manifest&url=https://dn-shgbit.qbox.me/spdb.plist">app下载 </a>
-    </form>
+    <div align='center'>
+        <a href="itms-services://?action=download-manifest&url=https://dn-spdb.qbox.me/spdb.plist">在线安装</a>  
+    <div>
 </body>
 </html>
